[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Button.tres" type="DynamicFont" id=2]
[ext_resource path="res://Shaders/hybrid.shader" type="Shader" id=3]
[ext_resource path="res://Scripts/Pause Screen.gd" type="Script" id=4]
[ext_resource path="res://Images/white.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/amount = 3.5
shader_param/frequency = 60.0
shader_param/depth = 0.005
shader_param/speed = 2.5

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="Pause Menu" type="TextureRect"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause Screen" type="MarginContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 35.0
margin_right = -50.0
margin_bottom = -35.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause Screen"]
margin_right = 1820.0
margin_bottom = 1010.0

[node name="Label" type="Label" parent="Pause Screen/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 2 )
text = "Paused"
align = 1
valign = 1

[node name="VSplitContainer" type="VSplitContainer" parent="Pause Screen/VBoxContainer"]
margin_top = 79.0
margin_right = 1820.0
margin_bottom = 722.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Continue" type="Button" parent="Pause Screen/VBoxContainer"]
margin_top = 726.0
margin_right = 1820.0
margin_bottom = 794.0
custom_fonts/font = SubResource( 3 )
text = "Continue"
flat = true

[node name="Level Select" type="Button" parent="Pause Screen/VBoxContainer"]
margin_top = 798.0
margin_right = 1820.0
margin_bottom = 866.0
custom_fonts/font = ExtResource( 2 )
text = "Level Select"
flat = true

[node name="Main Menu" type="Button" parent="Pause Screen/VBoxContainer"]
margin_top = 870.0
margin_right = 1820.0
margin_bottom = 938.0
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"
flat = true

[node name="Quit" type="Button" parent="Pause Screen/VBoxContainer"]
margin_top = 942.0
margin_right = 1820.0
margin_bottom = 1010.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
flat = true
[connection signal="pressed" from="Pause Screen/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Pause Screen/VBoxContainer/Level Select" to="." method="_on_Level_Select_pressed"]
[connection signal="pressed" from="Pause Screen/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="Pause Screen/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
